Revision history for PostScript::Calendar

0.05   NOT
	- Now possible to include multiple calendars in one PostScript file
	- PostScript::File 1.03 now provides pstr

0.04   June 25, 2008
	- No functional changes
	- Minor clean up to documentation
	- Exclude ProhibitAccessOfPrivateData from perlcritic.t
	- Skip perlcritic.t under AUTOMATED_TESTING
	- Use Module::Build::DistVersion for packaging

0.03   April 5, 2007
	- Round dimensions to integers to avoid subtle errors (RT#26090)

0.02   April 4, 2007
	- Setting title to the empty string now suppresses the title (RT#26089)
	- Bug fixes:
	  - add_event didn't respect newlines as documented
	  - label_font was ignored
	- Documentation fixes

0.01   March 25, 2007
	- Initial release