@@ -30,8 +30,7 @@ directory = cjm_releases
 [Prereq]
 perl             = 5.8.0 ; PostScript::File 1.03 requires this
 Date::Calc       = 5.0
-Font::AFM        = 1
-PostScript::File = 1.03  ; Need pstr
+PostScript::File = 2.01  ; Need metrics
 
 [MetaRecommends]
 Astro::MoonPhase = 0.60 ; Need phaselist
