@@ -2,7 +2,8 @@ Revision history for PostScript::Calendar
 
 0.05   NOT
 	- Now possible to include multiple calendars in one PostScript file
-	- PostScript::File 1.03 now provides pstr
+	- PostScript::File 2.00 now provides pstr and metrics
+	  Font::AFM is no longer required!
 
 0.04   June 25, 2008
 	- No functional changes
